communication between service and app

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "start": "cross-env AUTOJOY_ENV=dev run-p pages:dev backend:dev main:dev electron:start",
     "electron:pack": "electron-builder --dir",
     "electron:dist": "electron-builder",
-    "pack": "run-s pages:build backend:prod main:prod electron:pack",
-    "dist": "run-s pages:build backend:prod main:prod electron:dist",
+    "pack": "cross-env run-s pages:build backend:prod main:prod electron:pack",
+    "dist": "cross-env run-s pages:build backend:prod main:prod electron:dist",
     "install": "node-gyp rebuild",
     "pages:dev": "vite",
     "pages:build": "vite build",
@@ -41,27 +41,30 @@
     "@kmamal/sdl": "^0.11.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
+    "@types/node-ipc": "^9.2.3",
+    "@vitejs/plugin-vue": "^6.0.2",
     "@vue/eslint-config-prettier": "^10.2.0",
     "bindings": "^1.5.0",
-    "fast-xml-parser": "^4.5.1",
-    "ini": "^5.0.0",
-    "node-addon-api": "^8.3.0",
-    "vue": "^3.5.25",
-    "vue-router": "^4.6.3",
-    "xinput-ffi": "^4.0.0",
-    "yaml": "^2.4.0",
-    "@eslint/js": "^9.39.1",
-    "@vitejs/plugin-vue": "^6.0.2",
+    "cross-env": "^10.1.0",
     "electron": "^29.1.1",
     "electron-builder": "^24.13.3",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-vue": "^10.6.2",
+    "fast-xml-parser": "^4.5.1",
     "globals": "^15.15.0",
+    "ini": "^5.0.0",
+    "node-addon-api": "^8.3.0",
     "node-gyp": "^11.1.0",
+    "node-ipc": "^12.0.0",
     "npm-run-all": "^4.1.5",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.49.0",
-    "vite": "^7.2.7"
+    "vite": "^7.2.7",
+    "vue": "^3.5.25",
+    "vue-router": "^4.6.3",
+    "xinput-ffi": "^4.0.0",
+    "yaml": "^2.4.0"
   }
 }
