updating SDL and settings for linux

--- a/config-templates/linux/dolphin-wiimote-emulated.ini
+++ b/config-templates/linux/dolphin-wiimote-emulated.ini
@@ -132,6 +132,45 @@ Guitar/Stick/Left = `Pad W`
 Guitar/Stick/Right = `Pad E`
 Buttons/A = `Button A`
 Buttons/B = `Button B`
+[XINPUT_SANTROLLER_GUITAR]
+Device = SDL/0/RedOctane Guitar Hero X-plorer
+IR/Up = `Cursor Y-`
+IR/Down = `Cursor Y+`
+IR/Left = `Cursor X-`
+IR/Right = `Cursor X+`
+Shake/X = `Click 2`
+Shake/Y = `Click 2`
+Shake/Z = `Click 2`
+Extension = Guitar
+Nunchuk/Buttons/C = LCONTROL
+Nunchuk/Buttons/Z = LSHIFT
+Nunchuk/Stick/Up = W
+Nunchuk/Stick/Down = S
+Nunchuk/Stick/Left = A
+Nunchuk/Stick/Right = D
+Nunchuk/Stick/Calibration = 100.00 141.42 100.00 141.42 100.00 141.42 100.00 141.42
+Nunchuk/Shake/X = `Click 2`
+Nunchuk/Shake/Y = `Click 2`
+Nunchuk/Shake/Z = `Click 2`
+Source = 1
+Swing/Up = `Left Y+`
+Swing/Dead Zone = 40.
+Guitar/Frets/Green = `Button A`
+Guitar/Frets/Red = `Button B`
+Guitar/Frets/Yellow = `Button Y`
+Guitar/Frets/Blue = `Button X`
+Guitar/Frets/Orange = `Shoulder L`
+Guitar/Strum/Up = `Pad N`
+Guitar/Strum/Down = `Pad S`
+Guitar/Buttons/- = Back
+Guitar/Buttons/+ = Start
+Guitar/Stick/Up = `Pad N`
+Guitar/Whammy/Bar = if(`Left X-` > 0, (0.5-((`Left X-`) * 0.5)), ((`Left X+`) * 0.5) + 0.5)
+Guitar/Stick/Down = `Pad S`
+Guitar/Stick/Left = `Pad W`
+Guitar/Stick/Right = `Pad E`
+Buttons/A = `Button A`
+Buttons/B = `Button B`
 [PS3_GUITARHERO_GUITAR]
 Device = SDL/0/Guitar Controller P3
 Buttons/A = `Button 1`
