general bindings fixes

--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "electron:dist": "electron-builder",
     "pack": "cross-env run-s pages:build backend:prod main:prod electron:pack",
     "dist": "cross-env run-s pages:build backend:prod main:prod electron:dist",
-    "install": "node-gyp rebuild",
+    "install": "node -e \"if (process.platform==='win32'){require('child_process').spawnSync('node-gyp',['rebuild'],{stdio:'inherit'})}\"",
     "pages:dev": "vite",
     "pages:build": "vite build",
     "pages:preview": "vite preview",
-    "backend:dev": "esbuild src/autojoy-backend/index.mjs    --banner:js=\"import { createRequire } from 'module'; const require = createRequire(import.meta.url);\" --bundle --platform=node --format=esm --target=node20 --external:xinput-ffi --external:node-hid --external:@kmamal/sdl --external:*.node --outfile=src/dist/autojoy-backend.js --watch",
-    "backend:prod": "esbuild src/autojoy-backend/index.mjs    --banner:js=\"import { createRequire } from 'module'; const require = createRequire(import.meta.url);\" --bundle --platform=node --format=esm --target=node20 --external:xinput-ffi --external:node-hid --external:@kmamal/sdl --external:*.node --outfile=src/dist/autojoy-backend.js --minify",
+    "backend:dev": "esbuild src/autojoy-backend/index.mjs    --banner:js=\"import { createRequire } from 'module'; const require = createRequire(import.meta.url);\" --bundle --platform=node --format=esm --target=node20 --external:xinput-ffi --external:node-hid --external:pkg-prebuilds --external:@kmamal/sdl --external:*.node --outfile=src/dist/autojoy-backend.js --watch",
+    "backend:prod": "esbuild src/autojoy-backend/index.mjs    --banner:js=\"import { createRequire } from 'module'; const require = createRequire(import.meta.url);\" --bundle --platform=node --format=esm --target=node20 --external:xinput-ffi --external:node-hid --external:pkg-prebuilds --external:@kmamal/sdl --external:*.node --outfile=src/dist/autojoy-backend.js --minify",
     "main:dev": "esbuild src/main/index.js    --banner:js=\"import { createRequire } from 'module'; const require = createRequire(import.meta.url);\" --bundle --platform=node --format=esm --target=node20 --external:electron --external:*.node --external:node-hid --outfile=src/dist/main.js --watch",
     "main:prod": "esbuild src/main/index.js   --banner:js=\"import { createRequire } from 'module'; const require = createRequire(import.meta.url);\"  --bundle --platform=node --format=esm --target=node20 --external:electron --external:*.node --external:node-hid --outfile=src/dist/main.js --minify"
   },
@@ -66,6 +66,7 @@
   "dependencies": {
     "@kmamal/sdl": "^0.11.13",
     "node-hid": "^3.2.0",
+    "pkg-prebuilds": "^1.0.0",
     "xinput-ffi": "^4.0.2"
   }
 }
