fixing build on linux: node-hid uses prebuilt binaries

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "directories": {
       "buildResources": "electron-builder"
     },
+    "npmRebuild": false,
     "linux": {
       "artifactName": "autojoy-v${version}-linux.${ext}",
       "category": "Utility",
