--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "license": "MIT",
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/lodash": "^4.17.21",
     "@types/node-ipc": "^9.2.3",
     "@vitejs/plugin-vue": "^6.0.2",
     "@vue/eslint-config-prettier": "^10.2.0",
@@ -53,6 +54,7 @@
     "fast-xml-parser": "^4.5.1",
     "globals": "^15.15.0",
     "ini": "^5.0.0",
+    "lodash": "^4.17.21",
     "node-addon-api": "^8.3.0",
     "node-gyp": "^11.1.0",
     "node-ipc": "^12.0.0",
