--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "license": "MIT",
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/electron": "^1.4.38",
     "@types/lodash": "^4.17.21",
     "@types/node-ipc": "^9.2.3",
     "@vitejs/plugin-vue": "^6.0.2",
