--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "autojoy",
-  "version": "2.0.1",
+  "version": "3.0.0-rc1",
   "description": "Automatically update emulators and games input settings based on what's connected to your computer!",
   "main": "src/dist/main.js",
   "entry": "src/dist/main.js",
